Bug 1337248: remove bogus assertion in presence of explicit change hints. r=bholley

When any explicit change hint appears to trigger, for example, a repaint,  this
assertion is no longer true, and we should indeed avoid recreating the style
context unnecessarily for that element.

MozReview-Commit-ID: Ln7lBPZW0kp
Signed-off-by: Emilio Cobos Álvarez <emilio@crisal.io>